[package]
name = "arcu"
version = "0.1.2"
edition = "2021"
rust-version = "1.76.0"
description = "An Rcu implementation using an Arc to keep the read critical section short and handle cleanup"
repository = "https://github.com/Skgland/Arcu"
license = "MIT OR Apache-2.0"
keywords = ["rcu", "synchronization"]
categories = ["no-std", "concurrency", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
global_counters = ["std"]
thread_local_counter = ["std", "global_counters"]
std = []

[dependencies]
